--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.16.3",
     "express-session": "^1.15.6",
-    "gm": "^1.23.1"
+    "gm": "^1.23.1",
+    "silly-datetime": "^0.1.2"
   }
 }
